crates/oxc_css_parser/tests/error/less/qualified-rule/guard-after-selector-list.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `;`, but found `,`
  ┌─ guard-after-selector-list.less:1:3
  │
1 │ .a,
  │   ^
